Refactor the test

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ MLB/
 src/syntax.grm.desc
 src/syntax.grm.sig
 src/syntax.grm.sml
-test/should_run/*.lua
-test/mlbasis/should_run/*.lua
+test/*/*.lua
+test/*/*/*.lua
 lunarml
