--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ test/*/*/*.lua
 test/*/*.js
 test/*/*/*.js
 lunarml
+thirdparty/smlnj-lib/
+thirdparty/smlnj-lib.tgz
+thirdparty/smlnj-lib-original/
+thirdparty/smlnj-lib-lunarml/
+thirdparty/ml-yacc/
+thirdparty/ml-yacc.tgz
