Install third-party libraries

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ thirdparty/smlnj-lib-original/
 thirdparty/smlnj-lib-lunarml/
 thirdparty/ml-yacc/
 thirdparty/ml-yacc.tgz
+sml-lib/mlyacc-lib/
+sml-lib/smlnj-lib/
