--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: ci
 jobs:
   build-and-test:
     name: build-and-test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04 # 22.04 doesn't contain mlton
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
