--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,10 @@ jobs:
         run: make
       - name: Test
         run: make test test-stackless-handle test-luajit test-nodejs test-nodejs-cps
+        env:
+          LUA_INIT_5_3: ""
+          # LuaJIT: Workaround https://github.com/LuaJIT/LuaJIT/issues/859
+          LUA_INIT: "local c=math.ceil;math.ceil=function(x)if-1<x and x<0 then return 0/(-1)else return c(x)end end"
       - name: Prepare third-party libraries
         run: make -C thirdparty install
       - name: Compile myself (Lua)
