--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,6 @@ jobs:
       - name: Prepare third-party libraries
         run: make -C thirdparty install
       - name: Compile myself (Lua)
-        run: ./lunarml LunarML.mlb
+        run: ./lunarml compile LunarML.mlb
       - name: Compile myself (JavaScript)
-        run: ./lunarml --js-cps LunarML.mlb
+        run: ./lunarml compile --js-cps LunarML.mlb
