--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -106,12 +106,12 @@ jobs:
         run: make test-lua-continuations LUA=/usr/local/opt/lua@5.3/bin/lua
       - name: Prepare third-party libraries
         run: make -C thirdparty install LUA=/usr/local/opt/lua@5.3/bin/lua
-      - name: Compile myself (Lua)
-        run: make validate-lua LUA=/usr/local/opt/lua@5.3/bin/lua
-      - name: Compile myself (LuaJIT)
+      - name: Compile myself and validate (JavaScript)
+        run: make validate-js LUA=/usr/local/opt/lua@5.3/bin/lua
+      - name: Compile myself and validate (LuaJIT)
         run: make validate-luajit LUA=/usr/local/opt/lua@5.3/bin/lua
         env:
           # LuaJIT: Workaround https://github.com/LuaJIT/LuaJIT/issues/859
           LUA_INIT: "local c=math.ceil;math.ceil=function(x)if-1<x and x<0 then return 0/(-1)else return c(x)end end"
-      - name: Compile myself and validate (JavaScript)
-        run: make validate-js LUA=/usr/local/opt/lua@5.3/bin/lua
+      - name: Compile myself and validate (Lua)
+        run: make validate-lua LUA=/usr/local/opt/lua@5.3/bin/lua
