--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -95,9 +95,7 @@ jobs:
         run: make test LUA=/usr/local/opt/lua@5.3/bin/lua
       - name: Test (LuaJIT)
         run: make test-luajit LUA=/usr/local/opt/lua@5.3/bin/lua
-        env:
-          # LuaJIT: Workaround https://github.com/LuaJIT/LuaJIT/issues/859
-          LUA_INIT: "local c=math.ceil;math.ceil=function(x)if-1<x and x<0 then return 0/(-1)else return c(x)end end"
+        # ^ Homebrew's LuaJIT is recent enough so https://github.com/LuaJIT/LuaJIT/issues/859 is fixed
       - name: Test (JS)
         run: make test-nodejs LUA=/usr/local/opt/lua@5.3/bin/lua
       - name: Test (JS-CPS)
@@ -108,10 +106,8 @@ jobs:
         run: make -C thirdparty install LUA=/usr/local/opt/lua@5.3/bin/lua
       - name: Compile myself and validate (JavaScript)
         run: make validate-js LUA=/usr/local/opt/lua@5.3/bin/lua
-      - name: Compile myself and validate (LuaJIT)
-        run: make validate-luajit LUA=/usr/local/opt/lua@5.3/bin/lua
-        env:
-          # LuaJIT: Workaround https://github.com/LuaJIT/LuaJIT/issues/859
-          LUA_INIT: "local c=math.ceil;math.ceil=function(x)if-1<x and x<0 then return 0/(-1)else return c(x)end end"
+      # - name: Compile myself and validate (LuaJIT)
+      #   run: make validate-luajit LUA=/usr/local/opt/lua@5.3/bin/lua
+      #   # ^ Homebrew's LuaJIT is recent enough so https://github.com/LuaJIT/LuaJIT/issues/859 is fixed
       - name: Compile myself and validate (Lua)
         run: make validate-lua LUA=/usr/local/opt/lua@5.3/bin/lua
