CI: Disable validate-macos

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -52,8 +52,10 @@ jobs:
       - name: Compile myself and validate (JavaScript)
         run: make validate-js
 
+  # Disabled for now, because validate-lua consumes memory too much
   validate-macos:
     name: validate (macOS)
+    if: ${{ false }}
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
