More work for npm

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ thirdparty/smlnj-lib-lunarml/
 thirdparty/ml-yacc/
 lib/lunarml/ml/mlyacc-lib/
 lib/lunarml/ml/smlnj-lib/
+package/npm/lunarml.mjs
+package/npm/lib/
