Implement allowOptSemicolon annotation

--- a/test/Makefile
+++ b/test/Makefile
@@ -215,6 +215,7 @@ should_compile += $(addprefix successor_ml/should_compile/,\
   abstype.sml \
   record_extension_type.sml \
   optional-bar.sml \
+  optional-semicolon.sml \
 )
 should_not_compile += $(addprefix successor_ml/should_not_compile/,\
   nonexhaustive_bind.sml \
