--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,16 +75,16 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Rye
-        uses: eifinger/setup-rye@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
+          python-version-file: 'docs/.python-version'
           enable-cache: true
-          working-directory: 'docs/'
       - name: Sync dependencies
-        run: rye sync
+        run: uv sync
         working-directory: ./docs
       - name: Build HTML
-        run: make -C docs SPHINXBUILD="rye run sphinx-build" html
+        run: make -C docs SPHINXBUILD="uv run sphinx-build" html
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
