--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -11,7 +11,6 @@ dependencies = [
 ]
 requires-python = ">= 3.8"
 
-[tool.rye]
+[tool.uv]
 managed = true
-virtual = true
-dev-dependencies = []
+package = false
