--- a/.github/workflows/check-format.yaml
+++ b/.github/workflows/check-format.yaml
@@ -11,16 +11,16 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.local/bin
-          key: ${{ runner.os }}-smlfmt
+          key: ${{ runner.os }}-smlfmt-1.2.0
       - if: ${{ steps.cache-smlfmt.outputs.cache-hit != 'true' }}
         name: Install smlfmt
         run: |
           sudo apt-get update
           sudo apt-get install mlton
-          curl -Lo smlfmt.tar.gz https://github.com/shwestrick/smlfmt/archive/refs/tags/v1.1.0.tar.gz
+          curl -Lo smlfmt.tar.gz https://github.com/shwestrick/smlfmt/archive/refs/tags/v1.2.0.tar.gz
           tar xf smlfmt.tar.gz
-          make -C smlfmt-1.1.0
+          make -C smlfmt-1.2.0
           install -d ~/.local/bin
-          install -m 755 smlfmt-1.1.0/smlfmt ~/.local/bin
+          install -m 755 smlfmt-1.2.0/smlfmt ~/.local/bin
       - name: smlfmt
         run: make check-format
