--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,7 +79,7 @@ jobs:
     runs-on: ${{ matrix.runner }}
     strategy:
       matrix:
-        runner: [ubuntu-22.04, ubuntu-22.04-arm, macos-13, macos-14]
+        runner: [ubuntu-22.04, ubuntu-22.04-arm, macos-15-intel, macos-14]
     steps:
       - uses: actions/checkout@v4
       - name: Cache MLton
